--- a/src/app/component/course-details/course-details.component.html
+++ b/src/app/component/course-details/course-details.component.html
@@ -12,10 +12,10 @@
   <div class="card" style="width: 40rem;">
     <!-- <img src="..." class="card-img-top" alt="..."> -->
     <div class="card-body">
-      <h1 class="card-title">The Data Science Course: Complete Data Science Bootcamp</h1>
-      <p class="card-text">Complete Data Science Training: Mathematics, Statistics, Python, Advanced Statistics in Python, Machine & Deep Learning</p>
+      <h1 class="card-title">{{course?.courseName}}</h1>
+      <p class="card-text"> ----- </p>
       <h3>Students Enrolled</h3>
-      <h3>Course rating</h3>
+      <h3>{{course?.courseRating}}</h3>
       <a href="#" class="btn btn-primary">Share</a>
     </div>
   </div>
