--- a/src/app/course-add-edit/course-add-edit.component.html
+++ b/src/app/course-add-edit/course-add-edit.component.html
@@ -6,11 +6,20 @@
     <div class="row">
         <mat-form-field appearance="outline">
             <mat-label>Course</mat-label>
-            <input matInput type="text" formControlName="course">
+
+
+
+
+            <!-- <input matInput type="text" formControlName="course" required minlength="5"> -->
+            
+
+
+
+
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Description</mat-label>
-            <input matInput type="text" formControlName="description">
+            <input matInput type="text" formControlName="description" required minlength="5">
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Name of Instructor</mat-label>
