--- a/src/app/component/course-enrolled/course-enrolled.component.html
+++ b/src/app/component/course-enrolled/course-enrolled.component.html
@@ -49,7 +49,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <ul class="list-group" *ngFor="let content of weeklyContent">
+        <!-- <ul class="list-group" *ngFor="let content of weeklyContent">
             <li class="list-group-item active" aria-current="true" [value] = "content.contentId">{{content.contentName}} An active item
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -72,7 +72,7 @@
                     </div>
                   </div>
             </li> <br>
-          </ul>
+          </ul> -->
       </div>
   </div>
 
