--- a/src/app/component/courses/products.component.css
+++ b/src/app/component/courses/products.component.css
@@ -41,3 +41,10 @@
     transition: 0.3s ease-in-out;
     transform: scale(1.05);
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 3fr
+    }
+    * {box-sizing: border-box;}
