--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,11 +1,11 @@
 
 
-  <div class="card" style="width: 25rem; align-items: center; margin: auto;">
+  <div class="card" style="width: 25rem; align-items: center; margin: auto; margin-bottom: 150px;">
     <div class="card-body">
-        <form>
+        <!-- <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="loginObj.userEmail" [ngModelOptions]="{standalone:true}">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  [(ngModel)]="loginObj.userEmail" [ngModelOptions]="{standalone:true}">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
@@ -13,6 +13,29 @@
               <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="loginObj.userPassword" [ngModelOptions]="{standalone:true}">
             </div>
             <button type="submit" class="btn btn-primary " (click)="onLogIn()">Login</button>
-          </form>
+          </form> -->
+          <form action="" class="was-validated">
+            <div class="mb-3 mt-3">
+              <label for="uname" class="form-label">Username:</label>
+              <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  [(ngModel)]="loginObj.userEmail" [ngModelOptions]="{standalone:true}" required=""> -->
+
+              <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
+              <div class="valid-feedback">Valid.</div>
+              <div class="invalid-feedback">Please fill out this field.</div>
+            </div>
+            <div class="mb-3">
+              <label for="pwd" class="form-label">Password:</label>
+              <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
+              <div class="valid-feedback">Valid.</div>
+              <div class="invalid-feedback">Please fill out this field.</div>
+            </div>
+            <div class="form-check mb-3">
+              <input class="form-check-input" type="checkbox" id="myCheck" name="remember" required>
+              <label class="form-check-label" for="myCheck">I agree on blabla.</label>
+              <div class="valid-feedback">Valid.</div>
+              <div class="invalid-feedback">Check this checkbox to continue.</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form> 
     </div>
   </div>
