--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 25rem; align-items: center; margin: auto;">
+<div class="card" style="width: 25rem; align-items: center; margin: auto;margin-bottom: 150px;">
     <div class="card-body">
         <form>
             <div class="mb-3">
