--- a/src/app/component/course-enrolled/course-enrolled.component.html
+++ b/src/app/component/course-enrolled/course-enrolled.component.html
@@ -1,5 +1,5 @@
 <!-- navbar for interactive learning platform -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   <!-- navbar for interactive learning platform ends -->
 
@@ -38,6 +38,15 @@
         src="https://www.youtube.com/embed/u4ZoJKF_VuA">
         </iframe>
     </div>
+
+    <div *ngFor="let content of weekData">
+     <div>
+      {{content.title}}
+     </div> 
+     <div>
+      {{content.contentURL}}
+     </div> 
+    </div>
      
     <!-- code for off canvassing right to show weekly content -->
 
@@ -49,30 +58,18 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <!-- <ul class="list-group" *ngFor="let content of weeklyContent">
-            <li class="list-group-item active" aria-current="true" [value] = "content.contentId">{{content.contentName}} An active item
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <iframe width="100" height="100"
-                          src="{{content.contentURL}}">
-                        </iframe>
-                        <iframe width="100" height="100"
-                          src="https://www.youtube.com/embed/kKvK2foOTJM">
-                        </iframe> 
-    "{{content.contentURL}}"
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-body-secondary">Last updated 1 year ago</small></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+        <ul class="list-group" *ngFor="let content of weekData">
+            <li class="list-group-item active" aria-current="true" [value] = "content.title">
+              <div class="card" style="width: 18rem;">
+                <iframe [src]="content.contentURL" width="100px"></iframe>
+                <div class="card-body">
+                  <h5 class="card-title">{{content.title}}</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </li> <br>
-          </ul> -->
+          </ul>
       </div>
   </div>
 
