--- a/src/app/component/courses/products.component.css
+++ b/src/app/component/courses/products.component.css
@@ -11,7 +11,6 @@
 }
 
 .item img {
-    /* display: flex; */
     width: 64px;
     height: 64px;
 }
@@ -45,6 +44,6 @@
 .wrapper {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: 1fr 2fr 3fr
+    grid-template-rows: 1fr
     }
     * {box-sizing: border-box;}
