--- a/src/app/component/course-enrolled/course-enrolled.component.html
+++ b/src/app/component/course-enrolled/course-enrolled.component.html
@@ -1,77 +1,38 @@
-<!-- navbar for interactive learning platform -->
-<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">course-title</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Leave a rating</a>
-          </li>
-          <li class="nav-item">
-            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 25%">25%</div>
-              </div>
-            <a class="nav-link" href="#">your progress</a>
-          </li>
-          
-          
-        </ul>
-      </div>
-    </div>
-  </nav> -->
 
-  <!-- navbar for interactive learning platform ends -->
-
-
-  
 <!-- card for Showing course content -->
 
-  <div class="card" style="width: 70rem; margin: auto;padding: 20px;margin-top: 20px; margin-bottom: 20px;">
+  <div class="card" style="width: 70rem; margin: auto;padding: 20px;margin-top: 70px; margin-bottom: 20px;">
     <div style="padding: 5px;">
       <iframe width="1060" height="500"
-        src="https://www.youtube.com/embed/u4ZoJKF_VuA">
+        src="https://www.youtube.com/embed/Tk40p5V51wg">
         </iframe>
-    </div>
-
-    <div *ngFor="let content of weekData">
-     <div>
-      {{content.title}}
-     </div> 
-     <div>
-      {{content.contentURL}}
-     </div> 
     </div>
      
     <!-- code for off canvassing right to show weekly content -->
 
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="width: 25%;height: 42px;margin: auto;">Course Cotent</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="width: 25%;height: 42px;margin: auto;">Course Content</button>
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasRightLabel">Weekly Content</h5>
+      <h3 class="offcanvas-title" id="offcanvasRightLabel">Weekly Content</h3>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <ul class="list-group" *ngFor="let content of weekData">
+        <ul  *ngFor="let content of weekData">
             <li class="list-group-item active" aria-current="true" [value] = "content.title">
               <div class="card" style="width: 18rem;">
-                <iframe [src]="content.contentURL" width="100px"></iframe>
+                <!-- <iframe [src]="content.contentURL" width="100px"></iframe> -->
                 <div class="card-body">
-                  <h5 class="card-title">{{content.title}}</h5>
+                  <h2 class="card-title">{{content.title}}</h2>
+                  <h4>{{content.contentURL}}</h4>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </li> <br>
           </ul>
       </div>
   </div>
+
 
     <!-- code for off canvassing right to show weekly content ends -->
 
@@ -91,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col order-first">
-            4.5
+            4.3
           </div>
           <div class="col">
             15466
