--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,21 +1,108 @@
 
 
 <!-- Hero Section Starts -->
-
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+<div class="container">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="position: relative;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
+      <img src="assets/images/carousel-n.png" class="d-block w-80" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/carousel-2.jpg" class="d-block w-100" alt="...">
+      <img src="assets/images/carousel-n.png" class="d-block w-80" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/carousel-3.jpg" class="d-block w-100" alt="...">
+      <img src="assets/images/carousel-n.png" class="d-block w-80" alt="...">
     </div>
   </div>
 </div>
 
 <!-- Hero Section Ends -->
+
+<div class="card" style="width: 25rem;">
+  <div class="card-body" id="card-body">
+    <h1 class="card-title"> <strong>Keep Moving Up</strong></h1>
+    <p class="card-text" style="font-size: 20;">Learn the skills you need to take the next step — and every step after. Log in now to save on courses. Sale ends today.</p>
+  </div>
+</div>
+</div>
+
+<div class="banner" style="text-align: center; margin-top: 50px; font-size: 20;margin-bottom: 100px;"><br>
+  <a href="" style="text-decoration: none; color: #fff; margin: auto;margin-top: 20px;"><strong>Check out our latest company news!</strong></a>
+</div>
+
+<!-- About Us section starts -->
+
+<div class="card" style="width:50rem; margin: auto; text-align: center; border: #fff;margin-bottom: 50px;">
+  <div class="card-body">
+    <h1 class="card-title" id="about-title"> <strong> Improving lives through learning</strong></h1>
+    <p class="card-text" style="font-size: 20;">Whether you want to learn or to share what you know, you’ve come to the right place. As a global destination for online learning, we empower organizations and individuals with flexible and effective skill development.  Learn the skills you need to take the next step — and every step after. Log in now to save on courses. Sale ends today.</p>
+  </div>
+</div>
+
+
+<!-- About Us section ends -->
+
+<!-- Instructor section -->
+
+<h1 style="text-align: center;"><strong>Our Instructors</strong></h1>
+<div class="container text-center" style="margin-bottom: 50px;">
+  <div class="row justify-content-start">
+    <div class="col-8">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/Team-memeber-01.png" class="d-block w-30" alt="..." style="border-radius: 10%;">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/Team-memeber-02.jpg" class="d-block w-30" alt="..." style="border-radius: 10%;">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/Team-memeber-03.png" class="d-block w-30" alt="..."style="border-radius: 10%;">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <div class="col-3">
+      <h3 style="padding-left: 40px;padding-top: 20px;">
+        We help organizations of all types and sizes prepare for the path ahead — wherever it leads. Our curated collection of business and technical courses help companies, governments, and nonprofits go further by placing learning at the center of their strategies. <br>
+        Udemy fit us like a glove. Their team curates fresh, up-to-date courses from their marketplace and makes them available to customers.In total, it was a big success, I would get emails about what a fantastic resource it was.
+      </h3>
+    </div>
+  </div>
+
+
+  <!-- Just above footer -->
+  <div class="wrapper" style="margin-top: 30px; margin-bottom: 30px;display: flex; ">
+    <div class="card" style="width: 25rem;margin-left: 50px;background-color: rgb(170, 85, 250);color: #fff; height: 400px; border-radius: 0;">
+      <div class="card-body">
+        <h1 class="card-title">Work with us</h1>
+        <p class="card-text">At Udemy, we’re all learners and instructors. We live out our values every day to create a culture that is diverse, inclusive, and committed to helping employees thrive.Some quick example text to build on the card title and make up the bulk of the card's content.</p><br><br><br><br><br><br>
+        <a href="#" class="card-link" style="text-decoration: none; color: #fff;">Learn more</a>
+      </div>
+    </div>
+    <div class="card" style="width: 25rem;margin-left: 50px;background-color: rgb(243, 243, 72);border-radius: 0;">
+      <div class="card-body">
+        <h1 class="card-title">See our research</h1>
+        <p class="card-text">We’re committed to improving lives through learning. Dig into our original research to learn about the forces that are shaping the modern workplace.Some quick example text to build on the card title and make up the bulk of the card's content.</p><br><br><br><br><br><br><br>
+        <a href="#" class="card-link" style="text-decoration: none;color: #000;">Join our team</a>
+      </div>
+    </div>
+    <div class="card" style="width: 25rem;margin-left: 50px;background-color: rgb(27, 141, 27);color: #fff;border-radius: 0;">
+      <div class="card-body">
+        <h1 class="card-title">Read our blog</h1>
+        <p class="card-text">Want to know what we’ve been up to lately? Check out the Udemy blog to get the scoop on the latest news, ideas and projects, and more.Some quick example text to build on the card title and make up the bulk of the card's content.</p><br><br><br><br><br><br><br>
+        <a href="#" class="card-link" style="text-decoration: none; color: #fff;">Read now</a>
+      </div>
+    </div>
+  </div>
+
 
 
