--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -2,7 +2,7 @@
 
   <div class="card" style="width: 25rem; align-items: center; margin: auto; margin-bottom: 150px;">
     <div class="card-body">
-        <!-- <form>
+        <form class="row g-3 needs-validation" novalidate>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  [(ngModel)]="loginObj.userEmail" [ngModelOptions]="{standalone:true}">
@@ -13,29 +13,7 @@
               <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="loginObj.userPassword" [ngModelOptions]="{standalone:true}">
             </div>
             <button type="submit" class="btn btn-primary " (click)="onLogIn()">Login</button>
-          </form> -->
-          <form action="" class="was-validated">
-            <div class="mb-3 mt-3">
-              <label for="uname" class="form-label">Username:</label>
-              <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  [(ngModel)]="loginObj.userEmail" [ngModelOptions]="{standalone:true}" required=""> -->
-
-              <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
-              <div class="valid-feedback">Valid.</div>
-              <div class="invalid-feedback">Please fill out this field.</div>
-            </div>
-            <div class="mb-3">
-              <label for="pwd" class="form-label">Password:</label>
-              <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-              <div class="valid-feedback">Valid.</div>
-              <div class="invalid-feedback">Please fill out this field.</div>
-            </div>
-            <div class="form-check mb-3">
-              <input class="form-check-input" type="checkbox" id="myCheck" name="remember" required>
-              <label class="form-check-label" for="myCheck">I agree on blabla.</label>
-              <div class="valid-feedback">Valid.</div>
-              <div class="invalid-feedback">Check this checkbox to continue.</div>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form> 
+          </form>
+          
     </div>
   </div>
