--- a/src/app/component/error/error.component.html
+++ b/src/app/component/error/error.component.html
@@ -1,3 +1,4 @@
-<!-- <p>404 Page not found!</p> -->
-<h1 style="padding-left: 30px;">404</h1>
+<div style="margin-top: 320px; top: 100;">
+    <h1 style="padding-left: 30px;">404</h1>
 <h1 style="padding-left: 30px;">Page not found</h1>
+</div>
