--- a/src/app/component/courses/products.component.html
+++ b/src/app/component/courses/products.component.html
@@ -4,6 +4,10 @@
       <div class="mb-3">
           
           <input type="text" class="form-control" placeholder="Search courses" [(ngModel)] = "searchText"></div>
+          <!-- <div>
+            ngqva
+            {{searchText}}
+          </div> -->
           
   </form>
 </div>
@@ -37,7 +41,6 @@
           
             </div>
       </div>
-      <!-- </div> -->
 
 
 
