--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -1,18 +1,29 @@
-<div class="user">
+<div class="user" style="padding-top: 500px;">
     
 
+<div class="row mt-3">
 
+    <div class="col-md-3"></div>
 
+    <div class="col-md-6" >
 
+        <div class="card mt-2" *ngFor="let course of courseService.myCourses">
 
+            <div class="card-header py-3">
 
+              <h4>{{course.courseName}}</h4>
 
+            </div>
 
+            <div class="card-body d-md-flex justify-content-md-end">
 
+              <div class="btn btn-primary" [routerLink]="['/enrolled', course.courseId]">Go to course</div>
 
+            </div>
 
+          </div>
 
+    </div>
 
-
-
-</div>
+    
+   
